# psyengine

./: .clang-tidy  .gitignore  CMakeLists.txt
cmake/: psyengineConfig.cmake.in
examples/: CMakeLists.txt  main.cpp
include/psyengine/: CMakeLists.txt  base_state.hpp  input_handler.hpp  input_manager.hpp  input_manager.ipp  input_manager.tpp  psyengine.hpp  rand.hpp  random_utils.hpp  sdl_game.hpp  sdl_raii.hpp  sdl_runtime.hpp  state_manager.hpp  time.hpp  timer.hpp
include/psyengine/debug/: assert.hpp
include/psyengine/input/: input_manager.hpp  input_manager.ipp
include/psyengine/math/: math_utils.hpp  vector.hpp  vector2.hpp  vector2.ipp
include/psyengine/platform/: sdl_raii.hpp  sdl_runtime.hpp
include/psyengine/resources/: texture_manager.hpp
include/psyengine/state/: base_state.hpp  state_manager.hpp
include/psyengine/time/: clock.hpp  time.hpp  timer.hpp
include/psyengine/utils/: random_utils.hpp  utils.hpp
src/: CMakeLists.txt  input_handler.cpp  input_manager.cpp  sdl_game.cpp  sdl_runtime.cpp  state_manager.cpp  texture_manager.cpp
src/input/: input_manager.cpp
src/platform/: sdl_runtime.cpp
src/state/: state_manager.cpp
src/time/: clock.cpp
